# Light

./: .gitmodules  CMakeLists.txt  README.md  REQ.md
data/: .implicit.txt.swp  cube.raw  floor.raw  implicit (copy).txt  implicit.txt  implicit_box.txt  implicit_cylinder.txt  implicit_pre.txt  implicit_sphere.txt  inertia.txt  light.txt  mycube.raw  particle.txt  particle_emitter.txt  particle_render.fs  particle_render.vs  physic (copy).txt  physic.txt  ship.raw  ship2.raw  sphere.raw  volume.cs
dev/: CMakeLists.txt
dev/implicit/: .main.c.swl  .main.c.swm  .main.c.swn  .main.c.swo  .main.c.swp  CMakeLists.txt  main.c  main_old.c
dev/kd_tree/: CMakeLists.txt
dev/light/: CMakeLists.txt  main.c
dev/mesh/: CMakeLists.txt  main.c
dev/particlesystem/: .main.c.swo  CMakeLists.txt  main.c
dev/physic/: CMakeLists.txt  main.c
dev/rope_test/: CMakeLists.txt  main.c
dev/template/: CMakeLists.txt
dev/template/src/: main.c
dev/test/: CMakeLists.txt  main.c
doc/src/: rope_physic.tex
include/: camera.h  camera_input.h  config.h  error.h  frame.h  framebuffer.h  platform.h  render_framebuffer.h  renderer.h  scene.h  scene_gui.h  shader.h  surface.h  vertex_buffer.h  vertex_buffer_model.h  vertex_instance.h  vertex_shader_program.h
include/math/: mat4x4.h  quaternion.h  vec.h
include/misc/: file.h
include/model/: raw_model.h
include/old/: vertex_instance.h
include/scene/: .implicit.h.swp  .object.h.swp  implicit.h  object.h  particle.h  particle_emitter.h  state.h
libs/glfw-3.1.1.bin.WIN32/lib-vc2015/: glfw3.lib
libs/glfw-3.1.1.bin.WIN32/lib-vc2015_x64/: glfw3.lib
libs/oglplus-0.65.0/: CMakeCache.txt
libs/oglplus-0.65.0/_build/: CMakeCache.txt
shaders/: text.fs
src/: .camera.c.swp  .framebuffer.c.swp  .scene.c.swp  .surface.c.swp  TODO.txt  camera.c  camera.cpp  camera.h  camera_input.c  camera_input.cpp  camera_input.h  error.c  frame.c  framebuffer.c  game.h  light_frame.c  light_surface.c  main.c  main.cpp  particle.h  physic.c  physic.cpp  physic.h  physic_kd_tree.c  platform.c  platform.cpp  platform.h  render_framebuffer.c  render_framebuffer.cpp  render_framebuffer.h  renderer.cpp  renderer.h  scene.c  scene.cpp  scene.h  scene_gui.c  shader.c  surface.c  vertex_buffer.cpp  vertex_buffer.h  (+6 more)
src/math/: mat4x4.c  mat4x4.cpp  mat4x4.h  quaternion.cpp  quaternion.h  vec.c  vec.h
src/misc/: file.c
src/model/: obj_model.h  raw_model.c  raw_model.cpp  raw_model.h
src/old/: physic.c  physic_intersect_.c  renderer.c  vertex_buffer.c  vertex_buffer_model.c  vertex_instance_attribute.c  vertex_shader_program.c
src/physic/: physic.c  physic_rope.c
src/scene/: .implicit.c.swp  implicit.c  mesh.c  particle.c  particle_emitter.c  particle_system.c  plane.c  state.c
test/inertia/: a.out  main.c  main_2.c
test/tree_norec/: a.out  main.c
test/vec_performance/: vec3perf.cpp
tools/objtoraw/: CMakeLists.txt  README.md
tools/objtoraw/src/: objtoraw.cpp
tools/rawviewer/: CMakeLists.txt  README.md  rawviewer.cpp
tools/rawviewer/src/: rawviewer.c  rawviewer.cpp
